<resources>

    <string name="app_name">Imprezowa Pizza</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="title_activity_glowne_okno">Imprezowa Pizza</string>
    <string name="txtCena">Cena Pizzy:</string>
    <string name="txtRozmiar">Rozmiar Pizzy: 45 cm</string>
    <string name="txtPorownaj">Porównanie Pizzy</string>
    <string name="txtPodziel">Podział Pizzy</string>
    <string name="wylicz">Porównaj</string>
    <string name="about">O programie</string>
    <string name="instrukcja">Jak pewnie widzisz, ekran podzielony jest na dwie części, symbolizujące dwie różne pizze. Suwając suwakiem (masło maślane?) ustawiamy średnicę pizzy, cenę zaś wpisujemy w pole poniżej. Podobnie ustawiamy parametry drugiej pizzy i klikamy przycisk &quot;Porównaj&quot;.</string>
    <string name="instrukcjaInfo">Instrukcja obsługi</string>
    <string name="uwagi">Uwagi odnośnie działania aplikacji proszę wysyłać pod adres: lukisio@siedemjeden.net Wspieraj darmowe oprogramowanie! Kliknij w reklamę i daj zarobić.</string>
    <string name="pln">PLN</string>
    <string name="nr_2">Nr 2</string>
    <string name="nr_1">Nr 1</string>
	<string name="spacja"> </string>
</resources>