<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/glowneOkno"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tlo"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtRozmiar"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ButtonMinusG"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="18dp"
        android:text="@string/txtCena"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
        android:id="@+id/line1"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:paddingTop="5dip" />    
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="120dp"
        android:text="@string/txtRozmiar"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="phone"
	    android:digits="1234567890."
	    android:singleLine="true"
        android:hint="@string/pln"
        android:selectAllOnFocus="true"
        android:nextFocusForward="@+id/glowneOkno" >

    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:textSize="28sp"
        android:text="@string/nr_1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView4"
        android:textSize="28sp"
        android:text="@string/nr_2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ButtonMinusD"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="18dp"
        android:text="@string/txtCena"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:paddingTop="5dip" />    
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:ems="10"
        android:inputType="phone"
	    android:digits="1234567890."
	    android:singleLine="true"
        android:hint="@string/pln"
        android:selectAllOnFocus="true"
        android:nextFocusForward="@+id/glowneOkno" />

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="8f04482daad34ae5"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, 43423541314A57353947" >
    </com.google.ads.AdView>

    <Button
        android:id="@+id/butWylicz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentRight="true"
        android:text="@string/wylicz" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/butWylicz"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/spacja"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <Button
        android:id="@+id/ButtonMinusG"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="4dp"        
        android:layout_below="@+id/textView1"
        android:text="-" />

    <Button
        android:id="@+id/ButtonPlusG"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"      
        android:layout_alignTop="@+id/ButtonMinusG"
        android:text="+" />


    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/ButtonMinusG"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:max="65"
        android:progress="45" />    
        
    
<Button
    android:id="@+id/ButtonMinusD"
    android:layout_width="35dp"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="4dp"        
    android:layout_below="@+id/textView5"
    android:text="-" />

<Button
    android:id="@+id/ButtonPlusD"
	android:layout_width="35dp"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"      
    android:layout_alignTop="@+id/ButtonMinusD"
    android:text="+" />    

    
<SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/ButtonMinusD"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:max="65"
        android:progress="45" />

<TextView
    android:id="@+id/textView1Wartosc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView3"
    android:layout_toRightOf="@+id/editText1"
    android:layout_marginLeft="10dp"
    android:text="@string/spacja"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<TextView
    android:id="@+id/textView2Wartosc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView8"
    android:layout_toRightOf="@+id/editText2"
    android:layout_marginLeft="10dp"
	android:text="@string/spacja"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<TextView
    android:id="@+id/textView1Pole"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView1Wartosc"
    android:layout_toRightOf="@+id/editText1"
    android:layout_marginLeft="10dp"
    android:text="@string/spacja"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<TextView
    android:id="@+id/textView2Pole"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView2Wartosc"
    android:layout_toRightOf="@+id/editText2"
    android:layout_marginLeft="10dp"
    android:text="@string/spacja"
    android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
